wp_derive_request_builder/tests/fail/namespace_attr_has_no_tokens.stderr
error: Expecting #[Namespace("_path_")] - Path is missing
 --> tests/fail/namespace_attr_has_no_tokens.rs:2:1
  |
2 | #[Namespace()]
  | ^
